mlir/test/Dialect/SDFG/sdg_arg_invalid_identifier.mlir
// RUN: not sdfg-opt %s 2>&1 | FileCheck %s

// CHECK: error: custom op 'sdfg.sdfg' expected type instead of SSA identifier

sdfg.sdfg @test(i32, %0 : i32)